eliminate horizontal scrolling within select dropdowns Issue: #4164 Issue: #4017

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -317,3 +317,8 @@ iframe, .iframe {
   border-color: #d0d0d0
 }
 
+/* eliminates horizontal scrollbar in some browsers */
+
+.bootstrap-select .dropdown-menu {
+  overflow-y: visible !important
+}
